--- a/src/components/tree/tree.sandbox.html
+++ b/src/components/tree/tree.sandbox.html
@@ -7,7 +7,7 @@
 
     <div style="width: 50%; float:left;">
         <h2>Single node selection</h2>
-        <p><m-tree :tree="tree" :isAllOpen="true" selectionQuantity="1" :selectedNodes="currentFile2" @newNodeSelected="newNodeSelected()" selectionIcon="information"></m-tree></p>
+        <p><m-tree :tree="tree" :isAllOpen="true" selectionQuantity="1" :selectedNodes="currentFile2" @newNodeSelected="newNodeSelected" selectionIcon="information"></m-tree></p>
     </div>
 
     <div style="clear: both;"></div>
@@ -20,7 +20,7 @@
 
     <div style="width: 50%; float:left;">
         <h3>Single file selection</h3>
-        <p><m-tree :tree="fileTree" selectionQuantity="1" :selectedNodes="currentFile" :fileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected()" selectionIcon="information"></m-tree></p>
+        <p><m-tree :tree="fileTree" selectionQuantity="1" :selectedNodes="currentFile" :fileTree="true" :isAllOpen="false" @newNodeSelected="newNodeSelected" selectionIcon="information"></m-tree></p>
     </div>
 
     <div style="clear: both;"></div>
@@ -42,7 +42,7 @@
     <div style="width: 50%; float:left;">
         <h3>Selected node not found</h3>
         <span>Console error</span>
-        <p><m-tree :tree="tree" :selectedNodes="wrongCurrentFile" selectionQuantity="1" selectionIcon="information"></m-tree></p>
+        <p><m-tree :tree="tree" :selectedNodes="wrongCurrentFile" selectionQuantity="1" @newNodeSelected="newNodeSelected"></m-tree></p>
     </div>
 
 </div>
