--- a/src/components/progress/progress.sandbox.html
+++ b/src/components/progress/progress.sandbox.html
@@ -60,4 +60,20 @@
     <p>
         <m-progress value="50" state="error" :circle="true"></m-progress>
     </p>
+    <h3>Progress Bar 100%, no state</h3>
+    <p class="m-u--margin-bottom">Progress bar in normal mode and circle mode, 100%</p>
+    <p>
+        <m-progress value="100"></m-progress>
+    </p>
+    <p>
+        <m-progress value="100" :circle="true"></m-progress>
+    </p>
+    <h3>Progress Bar 99%, no state</h3>
+    <p class="m-u--margin-bottom">Progress bar in normal mode and circle mode, 99%</p>
+    <p>
+        <m-progress value="99"></m-progress>
+    </p>
+    <p>
+        <m-progress value="99" :circle="true"></m-progress>
+    </p>
 </div>
