--- a/src/components/option/option.sandbox.html
+++ b/src/components/option/option.sandbox.html
@@ -7,23 +7,23 @@
         </br>From <a href="https://github.com/ulaval/modul-components/pull/000" target="blank">PR description</a>
         -->
     </p>
-    <m-menu>
+    <m-option>
     <m-menu-item-add @click="doAdd"></m-menu-item-add>
         <m-menu-item-edit></m-menu-item-edit>
         <m-menu-item-archive></m-menu-item-archive>
         <m-menu-item-delete :disabled="true"></m-menu-item-delete>
-    </m-menu>
-    <m-menu>
+    </m-option>
+    <m-option>
         <m-menu-item>Test 1</m-menu-item>
         <m-menu-item>Test 2</m-menu-item>
         <m-menu-item icon-name="m-svg__clock">Temps</m-menu-item>
-    </m-menu>
-    <m-menu>
+    </m-option>
+    <m-option>
         <m-menu-item>Test 1</m-menu-item>
         <m-menu-item :disabled="true">Test 2</m-menu-item>
         <m-menu-item>Test 3</m-menu-item>
         <m-menu-item>Test 4</m-menu-item>
         <m-menu-item>Test 5</m-menu-item>
         <m-menu-item>Test 6</m-menu-item>
-    </m-menu>
+    </m-option>
 </div>
