MODUL-298 rename m-menu-item to m-option-item

--- a/src/components/option-item/option-item.sandbox.html
+++ b/src/components/option-item/option-item.sandbox.html
@@ -8,6 +8,6 @@
         -->
     </p>
     <p>
-        <m-menu-item><!-- Test case --></m-menu-item>
+        <m-option-item><!-- Test case --></m-option-item>
     </p>
 </div>
