--- a/src/components/option/option.sandbox.html
+++ b/src/components/option/option.sandbox.html
@@ -8,22 +8,22 @@
         -->
     </p>
     <m-option>
-    <m-menu-item-add @click="doAdd"></m-menu-item-add>
-        <m-menu-item-edit></m-menu-item-edit>
-        <m-menu-item-archive></m-menu-item-archive>
-        <m-menu-item-delete :disabled="true"></m-menu-item-delete>
+    <m-option-item-add @click="doAdd"></m-option-item-add>
+        <m-option-item-edit></m-option-item-edit>
+        <m-option-item-archive></m-option-item-archive>
+        <m-option-item-delete :disabled="true"></m-option-item-delete>
     </m-option>
     <m-option>
-        <m-menu-item>Test 1</m-menu-item>
-        <m-menu-item>Test 2</m-menu-item>
-        <m-menu-item icon-name="m-svg__clock">Temps</m-menu-item>
+        <m-option-item>Test 1</m-option-item>
+        <m-option-item>Test 2</m-option-item>
+        <m-option-item icon-name="m-svg__clock">Temps</m-option-item>
     </m-option>
     <m-option>
-        <m-menu-item>Test 1</m-menu-item>
-        <m-menu-item :disabled="true">Test 2</m-menu-item>
-        <m-menu-item>Test 3</m-menu-item>
-        <m-menu-item>Test 4</m-menu-item>
-        <m-menu-item>Test 5</m-menu-item>
-        <m-menu-item>Test 6</m-menu-item>
+        <m-option-item>Test 1</m-option-item>
+        <m-option-item :disabled="true">Test 2</m-option-item>
+        <m-option-item>Test 3</m-option-item>
+        <m-option-item>Test 4</m-option-item>
+        <m-option-item>Test 5</m-option-item>
+        <m-option-item>Test 6</m-option-item>
     </m-option>
 </div>
