modul-298 quick fix m-menu --> m-option

--- a/src/components/accordion/accordion.sandbox.html
+++ b/src/components/accordion/accordion.sandbox.html
@@ -7,11 +7,11 @@
     <br>
     <m-accordion icon-position="right">
         <div slot="header">
-            <m-menu>
-                <m-menu-item>Menu 1</m-menu-item>
-                <m-menu-item>Menu 2</m-menu-item>
-                <m-menu-item>Menu 3</m-menu-item>
-            </m-menu>
+            <m-option>
+                <m-option-item>Menu 1</m-option-item>
+                <m-option-item>Menu 2</m-option-item>
+                <m-option-item>Menu 3</m-option-item>
+            </m-option>
             <a @click="doSomething('funny')" href="https://www.google.ca/" target="_blank">link</a>
             <button @click="doSomething('funny')">
                 button
