Ajout des 3 cas où la valeur doit décider de l'état de progression

--- a/src/components/progress/progress.sandbox.html
+++ b/src/components/progress/progress.sandbox.html
@@ -60,13 +60,16 @@
     <p>
         <m-progress value="50" state="error" :circle="true"></m-progress>
     </p>
-    <h3>Progress Bar 100%, no state</h3>
+    <h3>Progress Bar no state (value commands state)</h3>
     <p class="m-u--margin-bottom">Progress bar in normal mode and circle mode, 100%</p>
     <p>
-        <m-progress value="100"></m-progress>
+        <m-progress value="0"></m-progress>
     </p>
     <p>
-        <m-progress value="100" :circle="true"></m-progress>
+        <m-progress value="50"></m-progress>
+    </p>
+    <p>
+        <m-progress value="100"></m-progress>
     </p>
     <h3>Progress Bar 99%, no state</h3>
     <p class="m-u--margin-bottom">Progress bar in normal mode and circle mode, 99%</p>
