--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -4,7 +4,7 @@
                'm--is-anim-ready': animReady }]">
     <div class="m-navbar__max-width" :style="{ maxWidth: maxWidth }">
         <transition name="m--is">
-            <div ref="buttonLeft" class="m-navbar__button m--is-left" @click="scrollLeft" v-if="showArrowLeft && navigationArrow">
+            <div ref="buttonLeft" class="m-navbar__button m--is-left" @click="scrollLeft" v-if="hasArrowLeft">
                 <m-icon-button :skin="buttonSkin" icon-name="m-svg__chevron--left" :ripple="buttonRipple"></m-icon-button>
             </div>
         </transition>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <transition name="m--is">
-            <div ref="buttonRight" class="m-navbar__button m--is-right" @click="scrollRight" v-if="showArrowRight && navigationArrow">
+            <div ref="buttonRight" class="m-navbar__button m--is-right" @click="scrollRight" v-if="hasArrowRight">
                 <m-icon-button :skin="buttonSkin" icon-name="m-svg__chevron--right" :ripple="buttonRipple"></m-icon-button>
             </div>
         </transition>
